deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-app
spec:
  selector:
    matchLabels:
      app: echo-app
  template:
    metadata:
      labels:
        app: echo-app
    spec:
      containers:
      - name: echo-app
        image: mendhak/http-https-echo
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        - containerPort: 8443
