service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  type: NodePort
  selector:
    app: echo-app
  ports:
  - name: "http" 
    port: 8080
  - name: "https"
    port: 8443
